--- a/src/ModularDotNet.Core/ModularDotNet.Core.csproj
+++ b/src/ModularDotNet.Core/ModularDotNet.Core.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="DryIoc.dll" Version="4.5.0" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
   </ItemGroup>
 
 </Project>
