--- a/sonar-scanner.properties
+++ b/sonar-scanner.properties
@@ -1,4 +1,4 @@
 sonar.organization=modulardotnet
 sonar.projectKey=modulardotnet_ModularDotNet.Core
-
-sonar.sources=.
+sonar.projectVersion=0.0.1
+sonar.sources=src/
