--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   # GitHub CodeQL Analyze
   analyze:
-    name: Analyze
+    name: CodeQL Analyze
     runs-on: ubuntu-latest
 
     strategy:
@@ -34,6 +34,7 @@ jobs:
    
   # .NET Core Build
   build:
+    name: Build and SonarCloud Analyze
     runs-on: windows-latest
 
     steps:
@@ -81,4 +82,3 @@ jobs:
         dotnet build --configuration Release --no-restore
         dotnet test --no-restore --verbosity normal
         .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
-        
