--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "dotnet-test-explorer.testProjectPath": "**/**/*Tests.@(csproj|vbproj|fsproj)"
+    "dotnet-test-explorer.testProjectPath": "**/**/*Tests.@(csproj|vbproj|fsproj)",
+    "dotnet-test-explorer.autoWatch": true,
+    "dotnet-test-explorer.testArguments": "--collect:\"Code Coverage\""
 }
