--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,5 +80,5 @@ jobs:
       run: |
         .\.sonar\scanner\dotnet-sonarscanner begin /k:"modulardotnet_ModularDotNet.Core" /o:"modulardotnet" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
         dotnet build --configuration Release --no-restore
-        dotnet test --no-restore --collect:"Code Coverage"
+        dotnet test --no-restore /p:CollectCoverage=true /p:CoverletOutputFormat=opencover
         .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
