--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -80,5 +80,5 @@ jobs:
       run: |
         .\.sonar\scanner\dotnet-sonarscanner begin /k:"modulardotnet_ModularDotNet.Core" /o:"modulardotnet" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
         dotnet build --configuration Release --no-restore
-        dotnet test --no-restore --collect:"Coverlet" -- DataCollectionRunSettings.DataCollectors.DataCollector.Configuration.Format=opencover
+        dotnet test --no-restore --collect:"XPlat Code Coverage" --settings coverlet.runsettings
         .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
