Update sonar settings

--- a/sonar-scanner.properties
+++ b/sonar-scanner.properties
@@ -1,1 +1,3 @@
 sonar.cs.opencover.reportsPaths=**/**/*.opencover.xml
+sonar.cs.opencover.reportPath=**/**/*.opencover.xml
+sonar.coverageReportPaths=**/**/*.opencover.xml
