--- a/test/ModularDotNet.Core.Tests/ModularDotNet.Core.Tests.csproj
+++ b/test/ModularDotNet.Core.Tests/ModularDotNet.Core.Tests.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DryIoc.dll" Version="4.5.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
     <PackageReference Include="Serilog.Sinks.TestCorrelator" Version="3.2.0" />
     <PackageReference Include="xunit" Version="2.4.1" />
